--- a/Synergetics/www/Synergetics.html
+++ b/Synergetics/www/Synergetics.html
@@ -58,6 +58,8 @@
             <li><a href="#"> * Index</a></li>
             
         </ul>
+        <TABLE BORDER>
+  <TD><A style="color:brown;" HREF="collaboration.html">Next Page </A>
     </div>
     </div></div></div></div>
     
