--- a/Synergetics/www/dedication.html
+++ b/Synergetics/www/dedication.html
@@ -60,7 +60,7 @@
 <HR>
 
 <TABLE BORDER>
-  <TD><A HREF="scenario.html">Next Page </A>
+  <TD><A style="color:brown;"HREF="scenario.html">Next Page </A>
 </TABLE>
                         
                   </div>
