--- a/Synergetics/www/explicit.html
+++ b/Synergetics/www/explicit.html
@@ -70,7 +70,7 @@ Washington, D.C.
 
           <HR/>
 <TABLE BORDER>
-    <TD><A HREF="moral.html">Next Page </A></TD>
+    <TD><A style="color:brown;" HREF="moral.html">Next Page </A></TD>
 </TABLE>
  <!-- /page -->
 </div></div></div>    
