--- a/Synergetics/www/humans.html
+++ b/Synergetics/www/humans.html
@@ -34,13 +34,14 @@
 000.100
 </a>  
 Introduction to <A HREF="#">10 Color Posters</A>
-
+    
 <P>
+    </br>
 <A NAME="000.101"></A>
 <a href="#">
 000.101
 </a>
-
+    
 The combined land areas of Africa, Europe, and Asia embrace within their
 perimeters the Mediterranean, Black, Caspian, Aral, China, Arabian, Red, Baltic, and
 North seas: altogether their area was historically thought of only as a flat Universe
@@ -55,6 +56,7 @@ conceptioning.
 <a href="#">
 000.102
 </a>
+    </br>
 How did this pervading historical concept become outdated?  What changed
 the terrestrial conceptionings adopted by the leaders of the world's power structures?
 <P>
@@ -62,7 +64,7 @@ the terrestrial conceptionings adopted by the leaders of the world's power struc
 <a href="#">
 000.103
 </a>
-
+</br>
 When the archaeologists' artifact-proven history of mathematics opens 4,000
 years ago in Babylon and Mesopotamia, it is already a very sophisticated science.
 Mathematics may well have had its beginnings much earlier in India or Indochina, as it is
@@ -81,7 +83,7 @@ zero-the cipher-to be diffused into the university systems of Europe .
 <a href="#">
 000.104
 </a>
-
+</br>
 The cipher made possible the positioning of numbers, which in turn
 facilitated division and multiplication. Imagine trying to multiply or divide with Roman
 numerals . . . impossible!  The Renaissance began with the new calculating facility
@@ -100,7 +102,7 @@ whole new field of safely anticipated structural engineering and navigation.
 <a href="#">
 000.105
 </a>
-
+</br>
 This new anticipatory science made large engineering projects possible, but it
 became known to, and then was employed by, only the world's richest schemers,
 monarchs, nations, and pirate enterprisers. No others could afford to buy great ships.
@@ -117,7 +119,7 @@ caravans could not.
 <A NAME="000.106"></A>
 <a href="">
 000.106
-</a>
+</a></br>
 In 1600 the East India Company was founded as a private enterprise by
 Queen Elizabeth and a small group of her intimates. The limited legal liability of their
 enterprise was granted by royal decree, and its projects were thereafter militarily sustained
@@ -131,7 +133,7 @@ never set.
 <a href="#">
 000.107
 </a>
-
+</br>
 As professor of economics at the East India Company College in 1810
 Thomas Malthus became the first economic authority ever to receive in toto the vital
 statistics of a world-embracing spherical empire. At the very end of the 18th century
@@ -145,7 +147,7 @@ support on our planet. Until then all opinions on such matters had been pure gue
 <a href="#">
 000.108
 </a>
-
+</br>
 A third of a century after Malthus, Darwin attributed biological evolution to
 survival of only the fittest species (and individuals within species). Though he denied there
 was any economic significance in his theory of evolution, the economists insisted that
@@ -159,7 +161,7 @@ two world-wide political classes and two competing theories of political organiz
 <a href="">
 000.109
 </a>
-
+</br>
 As a consequence of the discoveries of Malthus and Darwin all the great
 political ideologies have since adopted a prime philosophy that says: "You may not like
 our political system, but we are convinced that we have the fairest, most logical, and
@@ -175,7 +177,7 @@ production.
 <a href="#">
 000.110
 </a>
-
+</br>
 Mutually assumed survival-only-of-the-fittest is the reason why the United
 States and the USSR have for the past 30 years appropriated 200 billion dollars annually
 to buy ever more effective weapons of potential destruction. The great political and
@@ -187,7 +189,7 @@ powers who divide to conquer and divide to keep conquered.
 <A NAME="000.111"></A>
 <a href="#">
 000.111
-</a>
+</a></br>
 Up until the 20th century reality consisted of everything that humans could
 see, smell, touch, and hear. Then at the entry into the 20th century the electron was
 discovered. A century after the time of Malthus much of science became invisible with the
@@ -199,7 +201,7 @@ powerful and incisive performances per pound of physical matter employed.
 <A NAME="000.112"></A>
 <a href="#">
 000.112
-</a>
+</a></br>
 SStructures are complexes of visible or invisible physical events interacting to
 produce stable patterns. A structural system divides Universe into all Universe outside the
 structural system (macrocosm) and all Universe inside the structural system (microcosm).
@@ -213,14 +215,14 @@ produces exponentially increased interatomic coherence of "materials."
 <A NAME="000.113"></A>
 <a href="#">
 000.113
-</a>
+</a></br>
 Gravity is the inwardly cohering force acting integratively on all systems.
 Radiation is the outwardly disintegrating force acting divisively upon all systems.
 <P>
 <A NAME="000.114"></A>
 <a href="#">
 000.114
-</a>
+</a></br>
 All structural systems are comprised of tension and compression
 components. Stone masonry has a high compression-resisting strength of 50,000 pounds
 per square inch ultimate. But masonry has low tensional coherence; it can withstand only
@@ -231,7 +233,7 @@ effective in its resistance to compression than to tension.
 <a href="#">
 000.115
 </a>
-
+</br>
 Throughout the three million known years of the Stone Age humans relied
 on gravity to hold their vertical stone walls together until (as often happened) they were
 shaken apart by earthquakes against which they had almost no tensionally cohering
@@ -252,7 +254,7 @@ could carry great cargoes.
 <a href="#">
 000.116
 </a>
-
+</br>
 In the 1850s humans arrived at the mass production of steel, an alloy of iron,
 carbon, and manganese having a tensile strength of 50,000 p.s.i. as well as a
 compression-resisting capability of 50.000 p.s.i. Steel has the same compression-resistance
@@ -267,7 +269,7 @@ wood, even though steel by itself does not float.
 <a href="#">
 000.117
 </a>
-
+</br>
 The technology of metallurgy began developing metal alloys of ever higher
 strength-to-weight ratios. Out of this came aluminum production by the opening of the
 20th century-and aluminum alloys and stainless steel by the 1930s. These new materials
@@ -286,7 +288,7 @@ vehicles at ever more accelerated rates of ascent.
 <a href="">
 000.118
 </a>
-
+</br>
 As of the 1970s the human mind has developed a practical tensile structuring
 capability of 600,000 p.s.i. The means of accomplishing this new and overwhelming
 structural strength has become entirely invisible. Fully 99 percent of humanity has as yet
@@ -301,7 +303,7 @@ investments or vast governments can afford to exploit the increased technical ad
 <a href="#">
 000.119
 </a>
-
+</br>
 Before the airplane humans said, "You cannot lift yourself by your
 bootstraps." Today we are lifting ever lighter and stronger structural vessel "selves" by
 ever less effort of our scientific know-how bootstraps. No economist knows this. It is the
@@ -313,7 +315,7 @@ profits for the government-subsidized private-enterprise producers of weapons.
 <a href="#">
 000.120
 </a>
-
+</br>
 Now in the 1970s we can state an indisputable proposition of abundance of
 which the world power structures do not yet have dawning awareness. We can state that
 as a consequence of the myriad of more-with-less, invisible, technological advances of the
@@ -327,7 +329,7 @@ degrees of freedom than has ever been enjoyed by anyone in all history.
 <a href="">
 000.121
 </a>
-
+</br>
 During this 10-year period we can also phase out all further use of fossil
 fuels and atomic energy, since the retooled world industry and individual energy needs will
 have become completely supplied by our combined harvests of electromagnetic,
@@ -342,7 +344,7 @@ energy-harvesting and -exporting centers rather than energy sinkholes.
 <a href="#">
 000.122
 </a>
-
+</br>
 All of the foregoing makes it possible to say that since we now know that
 there is a sustainable abundance of life support and accommodation for all, it follows that
 all politics and warring are obsolete and invalid. We no longer need to rationalize
@@ -353,7 +355,7 @@ cosmically prepaid.
 <a href="#">
 000.123
 </a>
-
+</br>
 Why don't we exercise our epochal option? Governments are financed
 through taxation and would have no way of putting meters between the people and their
 directly received individual cosmic incomes. So too, private enterprise should no more
@@ -367,7 +369,7 @@ fundamental inadequacies of life support.
 <a href="#">
 000.124
 </a>
-
+</br>
 Why does not the public itself demand realization of its option for a
 revolution by design science? Less than one percent of humanity now knows that the
 option exists; 99 percent of humanity cannot understand the mathematical language of
@@ -382,7 +384,7 @@ exercising its option.
 <a href="#">
 000.125
 </a>
-
+</br>
 The fact that 99 percent of humanity does not understand nature is the prime
 reason for humanity's failure to exercise its option to attain universally sustainable physical
 success on this planet. The prime barrier to humanity's discovery and comprehension of
@@ -394,7 +396,7 @@ adopted by and taught by present-day academic science.
 <a href="#">
 000.126
 </a>
-
+</br>
 Nature's continuous self-regeneration is 100 percent efficient, neither
 gaining nor losing any energy. Nature is not employing the three dimensional,
 omniinterperpendicular, parallel frame of the XYZ axial coordinates of academic science,
@@ -407,6 +409,7 @@ omniintertriangulated structuring from nuclei.
 <a href="#">
 000.127
 </a>
+    </br>
 Nature is inherently eight-dimensional, and the first four of these dimensions
 are the four planes of symmetry of the minimum structure of Universe-the
 omnitriangulated, equi-vector-edge tetrahedron. In respect to the conceptual pre-time-size
@@ -425,8 +428,8 @@ total of eight dimensions in all for experientially evidencing physical reality.
 <A NAME="000.1271"></A>
 <a href="#">
 000.1271
-</a>
-<IMG SRC="../figs/blanksp.gif">
+</a></br>
+
 To define the everywhere-and-everywhen-transforming cosmic environment
 of each and every system requires several more intercovarying system
 dimensions-planetary, solar, galactic, intergalactic. Because of the six positive and six
@@ -436,7 +439,7 @@ negative degrees of freedom governing systems-within-systems intertransforming, 
 <A NAME="000.128"></A>
 <a href="#" TARGET="comments">
 000.128
-</a>
+</a></br>
 Nature is using this completely conceptual eight-dimensional coordinate
 system that can be comprehended by anyone. Fortunately television, is spontaneously
 attractive and can be used to teach all the world's people nature's coordinating system-and
@@ -449,7 +452,7 @@ as a hydrogen atom.
 <A NAME="000.129"></A>
 <a href="#" >
 000.129
-</a>
+</a></br>
 Nature's coordinate system is called Synergetics-synergy means behavior of
 whole systems unpredicted by any part of the system as considered only separately. The
 eternally regenerative Universe is synergetic. Humans have been included in this cosmic
@@ -463,7 +466,7 @@ omniinteraccommodative, ceaseless intertransformings of Universe.
 <a href="#" >
 000.130
 </a>
-
+</br>
 At present 99 percent of humanity is misinformed in believing in the
 Malthusian concept of the fundamental inadequacy of life support, and so they have
 misused their minds to develop only personal and partisan advantages, intellectual
@@ -479,7 +482,7 @@ century.
 <A NAME="000.131"></A>
 <a href="#">
 000.131
-</a>
+</a></br>
 In complement with Synergetics 1 and 2 the posters at
 <A HREF="#">color plates 1-10</A> may
 clarify for everyone the few scientific conceptions and mathematical tools necessary for
@@ -507,7 +510,7 @@ might some day be otherwise:
 <HR>
 <DIV ALIGN="center">
 <TABLE BORDER>
-  <TD><A HREF="../s01/toc01.html">Next Page </A>
+  <TD><A style="color:brown;" style="color:brown;" HREF="../s01/toc01.html">Next Page </A>
 </TABLE>
 </DIV></DIV></DIV>    <!-- /page -->
       </body>
