--- a/Synergetics/www/index.html
+++ b/Synergetics/www/index.html
@@ -41,13 +41,14 @@
 </head>
     <center>
 <body>
-  <h2 style="background-color:BROWN;color:white; border-radius:10px; font-size:40px;">The Synergetics App</h2>
+  <h2 style="background-color:BROWN;color:white; border-radius:10px; font-size:40px;">SYNERGETICS</h2>
   <ul data-role="listview"  data-inset="true">
-    <li ><a href="Synergetics.html"><p style="font-size:15px; font-weight:bold;">Read Synergetics - By Buckminster Fuller</p> </a></li>
-     <li><a href-"#"><p style="font-size:15px; font-weight:bold;">Biography of Buckminster Fuller</p></a></li>  
-      <li><a href="#"><p style="font-size:15px; font-weight:bold;">Buckminster Fullers's inventions</p></a></li>
-  </ul>
-      <a href="Synergetics.html"><img src="img/synergetics.jpg" width="400"height="550"/></a>
+    <li ><a href="Synergetics.html"><p style="font-size:15px; font-weight:bold;">READ SYNERGETICS BY R. BUCKMINSTER FULLER</p> </a></li>
+     <li><a href-"#"><p style="font-size:15px; font-weight:bold;">BIOGRAPHY OF BUCKMINSTER FULLER</p></a></li>  
+      <li><a href="#"><p style="font-size:15px; font-weight:bold;">BUCKMINSTER FULLER'S INVENTIONS</p></a></li>
+      <li><a href="#"><p style="font-size:15px; font-weight:bold;">ABOUT THE BUCKMINSTER FULLER INSTITUTE</p></a></li>
+  </ul></br>
+      <a href="Synergetics.html"><img src="img/cober.jpg" width="350"height="440"/></a>
     </div>
  
            <div id="m_display"> </div>
@@ -56,8 +57,8 @@
     <!-- /content --> 
     
   </div>
-      <!-- /page --><footer id="footer"style="background-color:orange; color:white;">
-<p>Synergetics App is powered by <a href="http://facebook/TrinaryCompanyLimited">Trinary Company Limited</a> in Colaboration with <a href="http://bfi.org">The Buckminster Fuller Institute</a></p></footer >
+      <!-- /page --><footer style="background-color:white; color:black;width:350px;">
+          <p style=" color:black;">Synergetics App is powered by <a href="http://facebook/TrinaryCompanyLimited">Trinary Company Limited</a></p>
 <script type="text/javascript" src="cordova.js"></script>
    <script type="text/javascript" src="webintent.js"></script>
   <script src="js/jquery.min.js"></script>
