--- a/Synergetics/www/moral.html
+++ b/Synergetics/www/moral.html
@@ -52,7 +52,7 @@ undiscovered, unsuspectedly existent eternal generalized principles.
 <BR>
     
 <TABLE BORDER>
-  <TD><A HREF=note.html>Next Page </A></TD>
+  <TD><A style="color:brown;" HREF=note.html>Next Page </A></TD>
 </TABLE>
 
 </div></div></div> 
