--- a/Synergetics/www/scenario.html
+++ b/Synergetics/www/scenario.html
@@ -33,7 +33,7 @@
 Each scenario is a narrative sequence of geometrical exposition</P><P>
 written-and intended to be read-as a separate continuity.
 </P><div data-role="content">
-        <ul data-role="listview" data-filter="true" data-filter-placeholder="Search topic from table of contents..." data-filter-theme="a"
+        <ul data-role="listview" data-filter="true" data-filter-placeholder="Search topic from scenarios..." data-filter-theme="a"
             data-inset="true">
             <li><a href="#"> * Child as Explorer</a></li>
             <li><a href="#"> * Nature in a Corner</a></li>
@@ -66,7 +66,7 @@ Einstein's equation.
 <HR>
 <DIV ALIGN="center">
 <TABLE BORDER>
-  <TD><A HREF=explicit.html>Next Page </A>
+  <TD><A style="color:brown;" HREF=explicit.html>Next Page </A>
 </TABLE>
 
 <HR>
