--- a/Synergetics/www/wellspring.html
+++ b/Synergetics/www/wellspring.html
@@ -287,7 +287,7 @@ able to sustain and physically satisfy all humanity.
 
 
 <TABLE BORDER>
-  <TD><A HREF="humans.html">Next Page </A>
+  <TD><A style="color:brown;" HREF="humans.html">Next Page </A>
       </TABLE> </div></div></div>  </body>
       
   <script type="text/javascript" src="cordova.js"></script>
