--- a/Synergetics/www/collaboration.html
+++ b/Synergetics/www/collaboration.html
@@ -37,7 +37,7 @@ E. J. A.
 <HR>
 <DIV ALIGN="center">
 <TABLE BORDER>
-  <TD><A HREF="dedication.html">Next Page </A>
+  <TD><A style="color:brown;" HREF="dedication.html">Next Page </A>
 </TABLE>
 
 </div><div><div>
