--- a/Synergetics/www/index.html
+++ b/Synergetics/www/index.html
@@ -43,7 +43,7 @@
 <body>
   <h2 style="background-color:BROWN;color:white; border-radius:10px; font-size:40px;">SYNERGETICS</h2>
   <ul data-role="listview"  data-inset="true">
-    <li ><a href="Synergetics.html"><p style="font-size:15px; font-weight:bold;">READ SYNERGETICS BY R. BUCKMINSTER FULLER</p> </a></li>
+    <li ><a href="Synergetics.html"><p style="font-size:15px; font-weight:bold;">SYNERGETICS BY R. BUCKMINSTER FULLER</p> </a></li>
      <li><a href-"#"><p style="font-size:15px; font-weight:bold;">BIOGRAPHY OF BUCKMINSTER FULLER</p></a></li>  
       <li><a href="#"><p style="font-size:15px; font-weight:bold;">BUCKMINSTER FULLER'S INVENTIONS</p></a></li>
       <li><a href="#"><p style="font-size:15px; font-weight:bold;">ABOUT THE BUCKMINSTER FULLER INSTITUTE</p></a></li>
