--- a/Synergetics/www/index.html
+++ b/Synergetics/www/index.html
@@ -44,8 +44,8 @@
   <h2 style="background-color:BROWN;color:white; border-radius:10px; font-size:40px;">SYNERGETICS</h2>
   <ul data-role="listview"  data-inset="true">
     <li ><a href="Synergetics.html"><p style="font-size:15px; font-weight:bold;">SYNERGETICS BY R. BUCKMINSTER FULLER</p> </a></li>
-     <li><a href-"#"><p style="font-size:15px; font-weight:bold;">BIOGRAPHY OF BUCKMINSTER FULLER</p></a></li>  
-      <li><a href="#"><p style="font-size:15px; font-weight:bold;">BUCKMINSTER FULLER'S INVENTIONS</p></a></li>
+     <li><a href="biography.html"><p style="font-size:15px; font-weight:bold;">BIOGRAPHY OF BUCKMINSTER FULLER</p></a></li>  
+      <li><a href="inventions.html"><p style="font-size:15px; font-weight:bold;">BUCKMINSTER FULLER'S INVENTIONS</p></a></li>
       <li><a href="#"><p style="font-size:15px; font-weight:bold;">ABOUT THE BUCKMINSTER FULLER INSTITUTE</p></a></li>
   </ul></br>
       <a href="Synergetics.html"><img src="img/cober.jpg" width="350"height="440"/></a>
